made page for law firm

--- a/index.html
+++ b/index.html
@@ -7,54 +7,45 @@
     <link href="css/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Mukta:400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/82e4275e9f.js" crossorigin="anonymous"></script>
-    <title>Restaurant</title>
+    <title>Law Firm</title>
 </head>
 <body>
     <div class="headerWrapper">
+    <div class="line"></div>    
     <header class="clearfix">
-        <figure class="logo">
-            <img src="images/logo0.png" alt="logo" srcset="images/logo1.png 1x, images/logo2.png 2x, images/logo3.png 3x">
-        </figure>
-        <h1 class="companyName">Restaurant</h1>
-        <h1 class="companySlogan">Eat Good</h1>
+        
+        <h1 class="companyName">Smith and Smith</h1>
+        <h1 class="companySlogan">Where you come first.</h1>
     </header>
     </div>
     <div class="navWrapper">
     <nav class="clearfix">
         <ul>
-            <li class="active">
+            <li>
                 <a href="index.html">Home</a>
             </li>
-            <li>
-                <a href="#">Location</a>
+            <li class="active">
+                <a href="#">Attourneys</a>
             </li>
             <li>
-                <a href="#">Menu</a>
+                <a href="#">Practices</a>
+            </li>
+            <li>
+                <a href="#">About</a>
             </li>
             <li>
                 <a href="#">Contact</a>
+            </li>
+            <li>
+                <a href="#">Links</a>
             </li>
         </ul>
     </nav>
 </div>
     <main class="clearfix"> 
-<picture class="hero">
-    <source media="(max-width: 450px" srcset="hero/hero450.jpg">
-        <source media="(max-width: 600px" srcset="hero/hero600.jpg">
-            <source media="(max-width: 750px" srcset="hero/hero750.jpg">
-                <source media="(max-width: 900px" srcset="hero/hero900.jpg">
-                    <source media="(max-width: 1050px" srcset="hero/hero1050.jpg"> 
-                        <img src="hero/hero1200.jpg" alt="food on table">       
-</picture>
-
-    <h1 class="text">Home</h1>
+    <h1 class="text">Attourneys</h1>
     
         <h2>Our Founder</h2>
-        <picture class="founder">
-            <source media="(max-width: 480px" srcset="founder-assets/founder300.jpg">
-                <source media="(max-width: 960px" srcset="founder-assets/founder450.jpg"> 
-                                <img src="founder-assets/founder600.jpg" alt= "food on table">       
-        </picture>
         <p>Efficiently expedite resource maximizing models vis-a-vis
         world-class core competencies. Professionally pursue
         customized total linkage whereas functionalized
