--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </div>
     <div class="navWrapper">
     <nav class="clearfix">
-        <ul>
+        <button onclick="toggleMenu()">&#9776;</button>
+        <ul id="navMenu" class="hide">
             <li>
                 <a href="index.html">Home</a>
             </li>
@@ -45,95 +46,18 @@
     <main class="clearfix"> 
     <h1 class="text">Attourneys</h1>
     
-        <h2>Our Founder</h2>
-        <p>Efficiently expedite resource maximizing models vis-a-vis
-        world-class core competencies. Professionally pursue
-        customized total linkage whereas functionalized
-        scenarios. Phosfluorescently simplify economically sound
-        customer service rather than sticky materials.
-        Monotonectally iterate leading-edge markets whereas
-        alternative process improvements. Quickly conceptualize
-        empowered convergence rather than mission-critical
-        strategic theme areas.</p>
-        <p>Rapidiously grow fully researched methods of
-        empowerment after long-term high-impact interfaces.
-        Distinctively synergize future-proof web services vis-a-vis
-        proactive leadership skills. Uniquely disintermediate fully
-        tested models before client-based core competencies.
-        Collaboratively evolve transparent ROI rather than
-        market-driven solutions. Quickly leverage other's
-        impactful.</p>
-        <p>Efficiently expedite resource maximizing models vis-a-vis
-        world-class core competencies. Professionally pursue
-        customized total linkage whereas functionalized
-        scenarios. Phosfluorescently simplify economically sound
-        customer service rather than sticky materials.
-        Monotonectally iterate leading-edge markets whereas
-        alternative process improvements. Quickly conceptualize
-        empowered convergence rather than mission-critical
-        strategic theme areas.</p>
-        <p>Rapidiously grow fully researched methods of
-        empowerment after long-term high-impact interfaces.
-        Distinctively synergize future-proof web services vis-a-vis
-        proactive leadership skills. Uniquely disintermediate fully
-        tested models before client-based core competencies.
-        Collaboratively evolve transparent ROI rather than
-        market-driven solutions. Quickly leverage other's
-        impactful.</p>
-        <p>Efficiently expedite resource maximizing models vis-a-vis
-        world-class core competencies. Professionally pursue
-        customized total linkage whereas functionalized
-        scenarios. Phosfluorescently simplify economically sound
-        customer service rather than sticky materials.
-        Monotonectally iterate leading-edge markets whereas
-        alternative process improvements. Quickly conceptualize
-        empowered convergence rather than mission-critical
-        strategic theme areas.</p>
-        <p>Rapidiously grow fully researched methods of
-        empowerment after long-term high-impact interfaces.
-        Distinctively synergize future-proof web services vis-a-vis
-        proactive leadership skills. Uniquely disintermediate fully
-        tested models before client-based core competencies.
-        Collaboratively evolve transparent ROI rather than
-        market-driven solutions. Quickly leverage other's
-        impactful.</p>
-        <p>Efficiently expedite resource maximizing models vis-a-vis
-        world-class core competencies. Professionally pursue
-        customized total linkage whereas functionalized
-        scenarios. Phosfluorescently simplify economically sound
-        customer service rather than sticky materials.
-        Monotonectally iterate leading-edge markets whereas
-        alternative process improvements. Quickly conceptualize
-        empowered convergence rather than mission-critical
-        strategic theme areas.</p>
-        <p>Rapidiously grow fully researched methods of
-        empowerment after long-term high-impact interfaces.
-        Distinctively synergize future-proof web services vis-a-vis
-        proactive leadership skills. Uniquely disintermediate fully
-        tested models before client-based core competencies.
-        Collaboratively evolve transparent ROI rather than
-        market-driven solutions. Quickly leverage other's
-        impactful.</p>
-        <p>Efficiently expedite resource maximizing models vis-a-vis
-        world-class core competencies. Professionally pursue
-        customized total linkage whereas functionalized
-        scenarios. Phosfluorescently simplify economically sound
-        customer service rather than sticky materials.
-        Monotonectally iterate leading-edge markets whereas
-        alternative process improvements. Quickly conceptualize
-        empowered convergence rather than mission-critical
-        strategic theme areas.</p>
-        <p>Rapidiously grow fully researched methods of
-        empowerment after long-term high-impact interfaces.
-        Distinctively synergize future-proof web services vis-a-vis
-        proactive leadership skills. Uniquely disintermediate fully
-        tested models before client-based core competencies.
-        Collaboratively evolve transparent ROI rather than
-        market-driven solutions. Quickly leverage other's
-        impactful.</p>
+    <div class="flexed">
+        <div class="medium-6">
+        content here…
+        </div>
+        <div class="medium-6">
+        content here…
+        </div>
+    </div>
     </main>
     <footer>
         &copy David Enciso 2019
     </footer>
 </body>
+<script src="js/scripts.js"></script>
 </html>
