--- a/index.html
+++ b/index.html
@@ -44,14 +44,95 @@
     </nav>
 </div>
     <main class="clearfix"> 
-    <h1 class="text">Attourneys</h1>
     
     <div class="flexed">
-        <div class="medium-6">
-        content here…
+        <div class="small-5">
+        <h2>John Snow</h2>
+        <figure>
+            <img src="images/lawyer1.jpg" alt="image of lawyer" class="lawyer">
+        </figure>
+        <button class="learn">LEARN MORE</button>
         </div>
-        <div class="medium-6">
-        content here…
+        <div class="small-5">
+        <h2>Holly Flake</h2>
+        <figure>
+            <img src="images/lawyer2.jpg" alt="image of lawyer" class="lawyer">
+        </figure>
+        <button class="learn">LEARN MORE</button>
+        </div>
+        <div class="small-5">
+        <h2>Anne Maughn</h2>
+        <figure>
+            <img src="images/lawyer3.jpg" alt="image of lawyer" class="lawyer">
+        </figure>
+        <button class="learn">LEARN MORE</button>
+        </div>
+        <div class="small-5">
+        <h2>Mike Kline</h2>
+        <figure>
+            <img src="images/lawyer4.jpg" alt="image of lawyer" class="lawyer">
+        </figure>
+        <button class="learn">LEARN MORE</button>
+        </div>
+        <div class="small-8">
+            <h2>CLIENTS</h2>
+        </div>
+        <div class="small-8">
+            <h2>YOUR CASE REVIEW</h2>
+        </div>
+        <div class="small-8">
+            <h2>FAMOUS CASES</h2>
+        </div>
+        <div class="small-10">
+            <figure>
+                <img src="images/blog.jpg" alt="image of lawyer" class="blog">
+            </figure>
+            <h2>Blog Post 1</h2>
+            <p>Aenean placerat nisi, elementum dolor a pulvinar odio, turpis
+                urna, est est tincidunt et dis, tristique diam odio! Magna
+                porttitor, nisi mus pid nec diam mid! Phasellus habitasse! Vel
+                montes ac dignissim phasellus, cum ultrices integer...
+            </p>
+            <button class="read">Read More</button>
+        </div>
+        <div class="small-10">
+            <figure>
+                <img src="images/blog.jpg" alt="image of lawyer" class="blog">
+            </figure>
+            <h2>Blog Post 2</h2>
+            <p>Aenean placerat nisi, elementum dolor a pulvinar odio, turpis
+                urna, est est tincidunt et dis, tristique diam odio! Magna
+                porttitor, nisi mus pid nec diam mid! Phasellus habitasse! Vel
+                montes ac dignissim phasellus, cum ultrices integer...
+            </p>
+            <button class="read">Read More</button>
+        </div>
+        <div class="small-10">
+            <figure>
+                <img src="images/blog.jpg" alt="image of lawyer" class="blog">
+            </figure>
+            <h2>Blog Post 3</h2>
+            <p>Aenean placerat nisi, elementum dolor a pulvinar odio, turpis
+                urna, est est tincidunt et dis, tristique diam odio! Magna
+                porttitor, nisi mus pid nec diam mid! Phasellus habitasse! Vel
+                montes ac dignissim phasellus, cum ultrices integer...
+            </p>
+            <button class="read">Read More</button>
+        </div>
+        <div class="small-10">
+            <figure>
+                <img src="images/blog.jpg" alt="image of lawyer" class="blog">
+            </figure>
+            <h2>Blog Post 4</h2>
+            <p>Aenean placerat nisi, elementum dolor a pulvinar odio, turpis
+                urna, est est tincidunt et dis, tristique diam odio! Magna
+                porttitor, nisi mus pid nec diam mid! Phasellus habitasse! Vel
+                montes ac dignissim phasellus, cum ultrices integer...
+            </p>
+            <button class="read">Read More</button>
+        </div>
+        
+
         </div>
     </div>
     </main>
